[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
authors = ["sabilaakram <139713987+sabilaakram@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.75.0"
sqlmodel = "^0.0.4"
uvicorn = "^0.17.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.21.1"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
