[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["sabilaakram <139713987+sabilaakram@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "0.13.4"}  # Change to a compatible version
sqlalchemy = "^1.4.0"
sqlmodel = "^0.0.4"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
kafka-python = "^2.0.2"
pydantic = "^1.8.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.21.1" 
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
